// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot with default calc list 1`] = `
<div
  className="CashChart"
>
  <div
    className="CashChart-buttons"
  >
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square kc-Button--depressed"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☑
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          3 Mo
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          6 Mo
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          1 Yr
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          3 Yr
        </div>
      </div>
    </div>
  </div>
  <div
    className="VictoryContainer"
    style={
      Object {
        "height": "100%",
        "pointerEvents": "none",
        "position": "relative",
        "touchAction": "none",
        "userSelect": "none",
        "width": "100%",
      }
    }
  >
    <svg
      height={350}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchMove={[Function]}
      role="img"
      style={
        Object {
          "height": "auto",
          "pointerEvents": "all",
          "width": "100%",
        }
      }
      viewBox="0 0 350 350"
      width={350}
    >
      <g
        clipPath="url(#victory-clip-4)"
        style={
          Object {
            "height": "100%",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <defs>
          <clipPath
            id="victory-clip-4"
          >
            <rect
              height={250}
              vectorEffect="non-scaling-stroke"
              width={250}
              x={50}
              y={50}
            />
          </clipPath>
        </defs>
        <g>
          <path
            d={null}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "lightgray",
                "stroke": "none",
              }
            }
          />
          <path
            d={null}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "stroke": "#20DA33",
              }
            }
          />
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shapeRendering="auto"
          style={
            Object {
              "fill": "transparent",
              "stroke": "#90A4AE",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 2,
            }
          }
          vectorEffect="non-scaling-stroke"
          x1={50}
          x2={300}
          y1={300}
          y2={300}
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={100}
            x2={100}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={100}
            x2={100}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-0"
            x={100}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={100}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={150}
            x2={150}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={150}
            x2={150}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-1"
            x={150}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={150}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={200}
            x2={200}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={200}
            x2={200}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-2"
            x={200}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={200}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={250}
            x2={250}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={250}
            x2={250}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-3"
            x={250}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={250}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={300}
            x2={300}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={300}
            x2={300}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-4"
            x={300}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={300}
            >
              Dec
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shapeRendering="auto"
          style={
            Object {
              "fill": "transparent",
              "stroke": "#90A4AE",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 2,
            }
          }
          vectorEffect="non-scaling-stroke"
          x1={50}
          x2={50}
          y1={50}
          y2={300}
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={250}
            y2={250}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={250}
            y2={250}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-0"
            x={37}
            y={250}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={200}
            y2={200}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={200}
            y2={200}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-1"
            x={37}
            y={200}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={150}
            y2={150}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={150}
            y2={150}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-2"
            x={37}
            y={150}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={99.99999999999999}
            y2={99.99999999999999}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={99.99999999999999}
            y2={99.99999999999999}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-3"
            x={37}
            y={99.99999999999999}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.8
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={50}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={50}
            y2={50}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-4"
            x={37}
            y={50}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              1
            </tspan>
          </text>
        </g>
      </g>
    </svg>
    <div
      style={
        Object {
          "height": "auto",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 99,
        }
      }
    >
      <svg
        height={350}
        style={
          Object {
            "height": "auto",
            "overflow": "visible",
            "width": "100%",
          }
        }
        viewBox="0 0 350 350"
        width={350}
      />
    </div>
  </div>
</div>
`;

exports[`renders snapshot with empty props 1`] = `
<div
  className="CashChart"
>
  <div
    className="CashChart-buttons"
  >
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square kc-Button--depressed"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☑
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          3 Mo
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          6 Mo
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          1 Yr
        </div>
      </div>
    </div>
    <div
      className="kc-Button kc-Button--default kc-Button--small kc-Button--mediumDepth kc-Button--square"
      onClick={[Function]}
    >
      <div
        className="kc-Button-contentsWrapper"
      >
        <span
          aria-label="Icon"
          className="kc-Button-icon "
          role="img"
        >
          ☐
        </span>
        <div
          className="kc-Button-childrenWrapper"
        >
          3 Yr
        </div>
      </div>
    </div>
  </div>
  <div
    className="VictoryContainer"
    style={
      Object {
        "height": "100%",
        "pointerEvents": "none",
        "position": "relative",
        "touchAction": "none",
        "userSelect": "none",
        "width": "100%",
      }
    }
  >
    <svg
      height={350}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchCancel={[Function]}
      onTouchMove={[Function]}
      role="img"
      style={
        Object {
          "height": "auto",
          "pointerEvents": "all",
          "width": "100%",
        }
      }
      viewBox="0 0 350 350"
      width={350}
    >
      <g
        clipPath="url(#victory-clip-2)"
        style={
          Object {
            "height": "100%",
            "userSelect": "none",
            "width": "100%",
          }
        }
      >
        <defs>
          <clipPath
            id="victory-clip-2"
          >
            <rect
              height={250}
              vectorEffect="non-scaling-stroke"
              width={250}
              x={50}
              y={50}
            />
          </clipPath>
        </defs>
        <g>
          <path
            d={null}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "lightgray",
                "stroke": "none",
              }
            }
          />
          <path
            d={null}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "stroke": "#20DA33",
              }
            }
          />
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shapeRendering="auto"
          style={
            Object {
              "fill": "transparent",
              "stroke": "#90A4AE",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 2,
            }
          }
          vectorEffect="non-scaling-stroke"
          x1={50}
          x2={300}
          y1={300}
          y2={300}
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={100}
            x2={100}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={100}
            x2={100}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-0"
            x={100}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={100}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={150}
            x2={150}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={150}
            x2={150}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-1"
            x={150}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={150}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={200}
            x2={200}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={200}
            x2={200}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-2"
            x={200}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={200}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={250}
            x2={250}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={250}
            x2={250}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-3"
            x={250}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={250}
            >
              Dec
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={300}
            x2={300}
            y1={300}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={300}
            x2={300}
            y1={300}
            y2={305}
          />
          <text
            direction="inherit"
            dx={0}
            dy={10.26}
            id="chart-axis-1-tickLabels-4"
            x={300}
            y={313}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="middle"
              x={300}
            >
              Dec
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shapeRendering="auto"
          style={
            Object {
              "fill": "transparent",
              "stroke": "#90A4AE",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 2,
            }
          }
          vectorEffect="non-scaling-stroke"
          x1={50}
          x2={50}
          y1={50}
          y2={300}
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={250}
            y2={250}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={250}
            y2={250}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-0"
            x={37}
            y={250}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={200}
            y2={200}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={200}
            y2={200}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-1"
            x={37}
            y={200}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={150}
            y2={150}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={150}
            y2={150}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-2"
            x={37}
            y={150}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={99.99999999999999}
            y2={99.99999999999999}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={99.99999999999999}
            y2={99.99999999999999}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-3"
            x={37}
            y={99.99999999999999}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              0.8
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "#ECEFF1",
                "strokeDasharray": "10, 5",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={300}
            y1={50}
            y2={50}
          />
          <line
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "#90A4AE",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              }
            }
            vectorEffect="non-scaling-stroke"
            x1={50}
            x2={45}
            y1={50}
            y2={50}
          />
          <text
            direction="inherit"
            dx={0}
            dy={4.26}
            id="chart-axis-2-tickLabels-4"
            x={37}
            y={50}
          >
            <tspan
              dx={0}
              style={
                Object {
                  "fill": "#455A64",
                  "fontFamily": "'Roboto', 'Helvetica Neue', Helvetica, sans-serif",
                  "fontSize": 12,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 0,
                }
              }
              textAnchor="end"
              x={37}
            >
              1
            </tspan>
          </text>
        </g>
      </g>
    </svg>
    <div
      style={
        Object {
          "height": "auto",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 99,
        }
      }
    >
      <svg
        height={350}
        style={
          Object {
            "height": "auto",
            "overflow": "visible",
            "width": "100%",
          }
        }
        viewBox="0 0 350 350"
        width={350}
      />
    </div>
  </div>
</div>
`;
